FlatLaf adjustments